# go-bazel

./: .bazelrc_example  README.md  WORKSPACE  deps.bzl  go.mod
service/: BUILD.bazel  main.go  main_test.go
